# VisionPipeline

./: Blobs.py  Combining_Gradient_Direction.ipynb  GUI.py  README.md  SupervisedLearning.ipynb  data.txt  data_-1.txt  data_0.txt  data_04.txt  data_05.txt  data_06.txt  data_07.txt  data_08.txt  data_09.txt  data_1.txt  data_10.txt  data_11.txt  data_12.txt  data_13.txt  data_14.txt  data_15.txt  data_16.txt  data_17.txt  data_18.txt  data_19.txt  data_2.txt  data_20.txt  data_21.txt  data_22.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_8.txt  data_9.txt  illusion.mkv  labeled_corners_thetas.txt  linear_fitting_test.py  main.py  (+9 more)
.ipynb_checkpoints/: Combining_Gradient_Direction-checkpoint.ipynb  SupervisedLearning-checkpoint.ipynb
Cpp/: CMakeCache.txt  CMakeLists.txt  CircleDrawing.hpp  ContourDetection.hpp  ContourDetectionApproach.txt  ContourDetectionPseudoCode.txt  EdgeDrawing.hpp  LineDrawing.hpp  Makefile  SurfaceDetection.hpp  Transformations.hpp  VisionPipeline  VisionPipeline.cpp  Visualization.hpp  cmake_install.cmake  data_-1.txt  edgeSegments.txt  example.txt
Pics/: simple_edges.paint
