cmake_minimum_required(VERSION 2.8)
project( VisionPipeline )
find_package( OpenCV REQUIRED )
find_package(Boost 1.65.1 REQUIRED COMPONENTS system filesystem iostreams)
include_directories( ${OpenCV_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS} )
add_executable( VisionPipeline VisionPipeline.cpp )
link_directories( ${Boost_LIBRARY_DIRS} )
target_link_libraries( VisionPipeline ${OpenCV_LIBS} ${Boost_LIBRARIES})
